Update Gradle and plugins
Update Gradle Wrapper to 8.2.1, plugins, and build.
Update ZAP API client and dependencies.
Address deprecations with newer Java version and Selenium.
Apply new formatting, required for newer Java versions.

Signed-off-by: thc202 <thc202@gmail.com>